k8s/kyverno/verify-cosign-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-hookdrop-cosign-signature
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: verify-cosign-signatures
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - hookdrop
      verifyImages:
        - imageReferences:
            - "654654364687.dkr.ecr.us-east-1.amazonaws.com/hookdrop:*"
          mutateDigest: false
          attestors:
            - entries:
                - keyless:
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "https://github.com/nirjxr26/HookDrop/.github/workflows/ci.yml@refs/heads/main"
                    rekor:
                      url: "https://rekor.sigstore.dev"
